# misis-lct_sat

./: .gitignore  CHANGELOG.md  METRICS.md  README.md  pyproject.toml
.kiro/specs/frontend-redesign/: design.md  requirements.md  tasks.md
api/: app.py  competitor_reviews.json
api/core/: competitor_models.py  database.py  settings.py
api/core/agent/: agents.py  prompts.py  recommendation.py  utils.py
api/core/db/: competitor_crud.py  review_crud.py
api/routes/: ai.py  competitors.py  export.py  reports.py  reviews.py
frontend/: index.html  package-lock.json  vite.config.js
frontend/public/: test_reviews.json
frontend/src/: App.css  App.jsx  index.css
