[project]
name = "misis-lct"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0.0"
dependencies = [
    "fastapi (>=0.117.1,<0.118.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "uvicorn (>=0.37.0,<0.38.0)",
    "langgraph (>=0.6.8,<0.7.0)",
    "langchain (>=0.3.27)",
    "langchain-community (>=0.3.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "reportlab (>=4.2.0,<5.0.0)",
    "pandas (>=2.2.2,<3.0.0)",
    "matplotlib (>=3.9.0,<4.0.0)",
    "gigachat (>=0.1.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"